# VEDA_chatroom

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.c  main.c
client/include/: auth.h  client.h  connection.h  signal_handlers.h
client/src/: auth.c  client.c  connection.c  signal_handlers.c
server/: CMakeLists.txt  main.c  server.c
server/include/: connection.h  server.h  signal_handlers.h  utils.h
server/src/: connection.c  server.c  signal_handlers.c  utils.c
